scss/main.scss
@import 'vars';
@import 'mixins';
@import 'button';
@import 'slide';
@import 'tabs';

body {
    @include main-font();
    background-color: $background-color ;
}

body,html{
    margin:0;
    padding:0;
}

h1,h2,h3,h4,h5,h6{
    @include title-font();
}

.fright{
    float:right;
}

.fleft{
    float:left;
}

.interface {
    height: 100vh;
}

.menu {
    height: $topnav_height;
}

.content {
    height: $editor-height;
}

.json, .preview {
    position: fixed;
    width: auto;
    height: auto;
    top: 5vh;
    bottom: 5vh;
    left: 5%;
    right: 5%;
    z-index: 2;

    padding:10px;

    background-color: #EEE;
    border: 2px solid #222;
    border-radius: 20px;
}

.json textarea, .preview iframe {
    @include main-font(10px);
    display: block;
    overflow-x: hidden;
    overflow-y: auto;
    width: 95%;
    height: 80%;
    margin: 0 auto;
    resize: none;
}

.selectscaletext{
    @extend .topnav_element;
    $scalefontsize:18px;
    @include main-font($scalefontsize);
    $border-width:1px;
    border:2px black solid;
    padding:0 8px;
    line-height: $topnav_element_height - 2*$border-width;
    & select{
        font-family: inherit;
        font-size: $scalefontsize;
    }
}

.mask {
    position: fixed;
    z-index: 1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    background-color: black;
    opacity: 0.6;
}

